Pull request #1332: fix stats color
Merge in EXTENSIONS/browser-extension to master

Squashed commit of the following:

commit 1555fdd1cef72c1d9db1610fe3b835add6d5aaf7
Author: Anton <a.kaprielov@adguard.com>
Date:   Thu Aug 25 17:35:10 2022 +0300

    AG-16010 fix stats color

--- a/Extension/src/pages/popup/components/Stats/StatsTable/stats-table.pcss
+++ b/Extension/src/pages/popup/components/Stats/StatsTable/stats-table.pcss
@@ -24,7 +24,8 @@
     &__value {
         outline: none;
         margin-left: auto;
-        font-weight: 700;
+        font-weight: 600;
+        color: var(--gray900);
 
         @media (prefers-color-scheme: dark) {
             color: var(--grayd8);
@@ -39,7 +40,7 @@
         }
 
         &__value {
-            color: inherit;
+            color: var(--gray900);
         }
     }
 }
